@@ -15,5 +15,5 @@ void act_allchg(WORD wh, OBJECT *tree, WORD root, WORD ex_obj, GRECT *pt, GRECT 
                 WORD chgvalue, WORD dochg, WORD dodraw);
 void act_bsclick(WORD wh, OBJECT *tree, WORD root, WORD mx, WORD my, WORD keystate,
                  GRECT *pc, WORD dclick);
-WORD act_bdown(WORD wh, LONG tree, WORD root, WORD *in_mx, WORD *in_my,
+WORD act_bdown(WORD wh, OBJECT *tree, WORD root, WORD *in_mx, WORD *in_my,
                WORD keystate, GRECT *pc, WORD *pdobj);
