@@ -5214,3 +5214,5 @@ Start... early ages
   arg2 of act_allchg() from LONG to OBJECT *. (RFB)
 - desk/deskact.c desk/deskact.h desk/deskmain.c: Code cleanup: change
   arg2 of act_bsclick() from LONG to OBJECT *. (RFB)
+- desk/deskact.c desk/deskact.h desk/deskmain.c: Code cleanup: change
+  arg2 of act_bdown() from LONG to OBJECT *. (RFB)
